overflow hidden mobile, and fixing mobile header

--- a/styles/main.css
+++ b/styles/main.css
@@ -161,7 +161,7 @@ h4, .h4 {
   position: relative;
   z-index: 10;
   display: inline-block;
-  transform: translateX(7px);
+  margin-left: 6px;
 }
 .button:before, header a:before {
   content: "";
@@ -213,6 +213,9 @@ h4, .h4 {
     padding-right: calc(var(--bs-gutter-x) * 0.9);
     padding-left: calc(var(--bs-gutter-x) * 0.9);
   }
+  section {
+    overflow: hidden;
+  }
 }
 .fadeup-header.animate {
   transform: translateY(30px);
@@ -222,34 +225,40 @@ h4, .h4 {
 
 .fadein {
   transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
+  opacity: 0;
 }
 
-.fadeleft {
+.faderight {
   transform: translateX(-30px);
   opacity: 0;
   transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
 }
 
-.faderight {
+.fadeleft {
   transform: translateX(30px);
   opacity: 0;
   transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
 }
 
-.fadeup {
+.fadedown {
   transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
   transform: translateY(-30px);
   opacity: 0;
 }
 
-.fadedown {
+.fadeup {
   transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
   transform: translateY(30px);
   opacity: 0;
 }
 
+.delay {
+  transition-delay: 0.6s;
+}
+
 .fadein.animated,
 .fadedown.animated,
+.fadeup.animated,
 .fadeleft.animated,
 .faderight.animated,
 .fadeup-header.animate.animated {
@@ -320,8 +329,8 @@ header li {
 @media (max-width: 767px) {
   .header-logo {
     position: static;
-    margin-bottom: 40px;
-    max-width: 204px;
+    margin-bottom: 11px;
+    max-width: 152px;
   }
 }
 .hero {
@@ -361,6 +370,10 @@ header li {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.hero-media img.object-cover {
+  -o-object-position: 37% top;
+     object-position: 37% top;
+}
 
 .hero-content {
   max-width: 618px;
@@ -376,12 +389,16 @@ header li {
 
 @media (max-width: 767px) {
   .hero {
-    padding-top: 150px;
+    padding-top: 130px;
+  }
+  .hero .container {
+    padding-right: calc(var(--bs-gutter-x) * 0.9);
+    padding-left: calc(var(--bs-gutter-x) * 0.9);
   }
   .hero-subhead {
     font-size: 23px;
     line-height: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
   }
 }
 .quote {
