--- a/styles/partials/_animations.scss
+++ b/styles/partials/_animations.scss
@@ -6,35 +6,41 @@
 }
 
 .fadein {
-    transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
+    transition: opacity .5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
+    opacity: 0;
 }
 
-.fadeleft {
+.faderight {
     transform: translateX(-30px);
     opacity: 0;
     transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
 }
 
-.faderight {
+.fadeleft {
     transform: translateX(30px);
     opacity: 0;
     transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
 }
 
-.fadeup {
+.fadedown {
     transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
     transform: translateY(-30px);
     opacity: 0;
 }
 
-.fadedown {
+.fadeup {
     transition: opacity 0.5s ease-in-out 0.3s, transform 0.5s ease-in-out 0.3s;
     transform: translateY(30px);
     opacity: 0;
 }
 
+.delay {
+    transition-delay: 0.6s;
+}
+
 .fadein.animated,
 .fadedown.animated,
+.fadeup.animated,
 .fadeleft.animated,
 .faderight.animated,
 .fadeup-header.animate.animated {
