--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -52,7 +52,7 @@ header {
 @media(max-width:767px) {
     .header-logo {
         position: static;
-        margin-bottom: 40px;
-        max-width: 204px;
+        margin-bottom: 11px;
+        max-width: 152px;
     }
 }
